# omr_a2s_multimodal_transformer

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.txt  main.py  prepare_dataset.sh  pyproject.toml  requirements.txt  run_experiments.sh  test.py  train.py  train_audio2seq.py
config/audio2seq/: grandstaff_all.gin  grandstaff_beethoven.gin  grandstaff_chopin.gin  grandstaff_hummel.gin  grandstaff_joplin.gin  grandstaff_mozart.gin  grandstaff_scarlatti-d.gin
config/image2seq/: grandstaff_all.gin  grandstaff_beethoven.gin  grandstaff_chopin.gin  grandstaff_hummel.gin  grandstaff_joplin.gin  grandstaff_mozart.gin  grandstaff_scarlatti-d.gin
data/: GrandStaffDataset.py  KrnConverter.py  ar_dataset.py  encoding.py  encodingGS.py  files.ods  grandstaff.py  krn2audio.py  missing.sh  partitions.py  prepare_dataset.py  prepare_dataset.sh  preprocessing.py  update_dataset_to_hf.py  utils.py  vocabulary.py
docs/: TODO.txt
grandstaff/max_lens/: ImgDist_ar_w2i_kern.json
grandstaff/partitions/beethoven/: test.txt  train.txt  val.txt
grandstaff/partitions/chopin/: test.txt  train.txt  val.txt
grandstaff/partitions/grandstaff/: test.txt  train.txt  val.txt
grandstaff/partitions/hummel/: test.txt  train.txt  val.txt
grandstaff/partitions/joplin/: test.txt  train.txt  val.txt
grandstaff/partitions/mozart/: test.txt  train.txt  val.txt
grandstaff/partitions/scarlatti-d/: test.txt  train.txt  val.txt
grandstaff/vocabs/: ar_w2i_kern.json
model/: dan_transformer.py  decoder.py  encoder.py  encoding.py  multimodal_transformer.py
multimodal/smith_waterman/: smith_waterman.py  test.py
multimodal/weighted_multimodal/: test.py
src/: test.py  train.py
src/data/: ar_dataset.py  encoding.py  prepare_dataset.py  preprocessing.py  update_dataset_to_hf.py
src/multimodal/smith_waterman/: smith_waterman.py  test.py
src/multimodal/weighted_multimodal/: test.py
src/transformer/: decoder.py  model.py
src/utils/: environment.py  get_train_params.py  metrics.py  seed.py  split_multimodal_ckpt.py
transformer/: decoder.py  encoder.py  model.py
utils/: kern.py  metrics.py  seed.py  split_multimodal_ckpt.py
vocab/: preprocessing.py
